--- a/catfeeder.org
+++ b/catfeeder.org
@@ -12,8 +12,10 @@
    does not work current with pi 3
 
 ** Raspberry pi 3 needs different RPIO used:
-   https://github.com/limuxy/RPIO
+   git clone https://github.com/limuxy/RPIO
    need to be root import RPIO
+   python setup.py build
+   sudo python setup.py install
    
 * TODO  WIFI set up 
   For now, ran ethernet cable to work bench
@@ -66,3 +68,11 @@ GPIO.cleanup()
 
 * OpenCV on PI
   http://www.pyimagesearch.com/2015/10/26/how-to-install-opencv-3-on-raspbian-jessie/
+
+git clone https://github.com/ejboettcher/CatFeederPi
+sudo apt-get update
+sudo apt-get install screen
+sudo apt-get install build-essential git cmake pkg-config
+sudo apt-get install libjpeg-dev libtiff5-dev libjasper-dev libpng12-dev
+sudo apt-get install libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
+sudo apt-get install libxvidcore-dev libx264-dev libgtk2.0-dev libatlas-base-dev gfortran python2.7-dev python3-dev
