--- a/catfeeder.org
+++ b/catfeeder.org
@@ -88,6 +88,7 @@ sudo apt-get install libxvidcore-dev libx264-dev libgtk2.0-dev libatlas-base-dev
 wget https://github.com/Itseez/opencv/archive/master.zip
 
 
+
 * UV4L 
   another option for streaming rpi video
 http://raspberrypi.stackexchange.com/questions/22372/using-the-uv4l-driver-to-stream-video-from-the-raspberry-pi-camera-to-android-ph
@@ -97,3 +98,12 @@ Adding line to /etc/apt/sources.list: "deb http://www.linux-projects.org/listing
 sudo apt-get update
 sudo apt-get install uv4l uv4l-raspicam
 sudo apt-get install uv4l-raspicam-extras
+
+
+* setting timezone
+  use tzselect from command prompt to choose time zone
+  add the following code to the ~/.profile 
+  
+  # set timezone value - APN
+  TZ='America/New_York'; export TZ
+
